<resources>
    <string name="app_name" translatable="false">Alvima Truck</string>
    <string name="googlemapkey">AIzaSyCIH1XjSwGg8TyoC0xvREyu5nMO4Qof4vk</string>
    <string name="api_fail_message">Alvima Truck server is currently unavailable; please try again later.</string>
    <string name="please_check_your_internet_connection">Please check your internet connection</string>
    <string name="location_permission_required">Location permission required</string>
    <string name="permission_denied">Permission denied</string>
    <string name="please_enter_customer_name">Please enter customer name</string>
    <string name="please_enter_contact_name">Please enter contact name</string>
    <string name="please_upload_customer_photo">Please upload customer photo</string>
    <string name="please_enter_customer_phone_number">Please enter customer phone number</string>
    <string name="please_enter_valid_customer_phone_number">Please enter valid customer phone number</string>
    <string name="please_enter_telephone_number">Please enter telephone number</string>
    <string name="please_enter_valid_telephone_number">Please enter valid telephone number</string>
    <string name="please_select_city">Please select city</string>
    <string name="please_enter_postal_code">Please enter postal code</string>
    <string name="please_enter_address">Please enter address</string>
    <string name="please_enter_tin_number">Please enter TIN number</string>
    <string name="please_upload_id_proof">Please upload ID proof</string>
    <string name="please_select_posting_group">Please select posting group</string>
    <string name="please_select_price_group">Please select price group</string>
    <string name="please_write_a_reason">Please write a reason</string>
    <string name="please_select_a_reason">Please select a reason</string>
    <string name="please_select_item">Please select Item</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="only_up_to_units_are_available_for_transfer">Only up to %1$d units are available for transfer</string>
    <string name="please_select_vendor">Please select vendor</string>
    <string name="please_enter_repair_cost">Please enter repair cost</string>
    <string name="please_upload_repair_images">Please upload repair images</string>
    <string name="please_select_profit_center">Please select Profit Center</string>
    <string name="please_select_cost_center">Please select Cost Center</string>
    <string name="please_select_to_location">Please select To Location</string>
    <string name="please_select_in_transit">Please select In Transit</string>
    <string name="please_enter_start_km">Please enter start km</string>
    <string name="please_enter_end_km">Please enter end km</string>
    <string name="end_km_should_be_greater_than_start_km">End km should be greater than start km</string>
    <string name="enter_sales_price">Enter Sales Price</string>
    <string name="quantity_must_be_greater_than_or_equal_to">Quantity must be greater than or equal to %1$d</string>
    <string name="only_up_to_units_are_available_in_the_van">"Only up to %1$d units are available in the van "</string>
    <string name="please_enter_old_password">Please enter old password</string>
    <string name="please_enter_new_password">Please enter new password</string>
    <string name="please_enter_confirm_password">Please enter confirm password</string>
    <string name="new_password_and_confirm_password_does_not_match">New password and confirm password does not match</string>
    <string name="please_enter_fuel_amount">Please enter fuel amount</string>
    <string name="please_upload_meter_receipt_photo">Please upload meter/receipt photo</string>
    <string name="please_select_incident_type">Please select incident type</string>
    <string name="please_enter_description">Please enter description</string>
    <string name="please_upload_incident_images">Please upload incident images</string>
    <string name="please_select_van_no">Please select van no.</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_enter_all_4_digits">Please enter all 4 digits</string>
    <string name="please_contact_to_admin_for_post_invoice">Please contact to Admin for Post Invoice</string>
    <string name="please_select_a_date_range">Please select a date range</string>
    <string name="please_select_postal_code">Please select postal code</string>
    <string name="order_has_not_been_synced_with_bc_yet_please_wait_for_a_while_and_try_again">Order has not been synced with BC yet. Please wait for a while and try again</string>
    <string name="search_van_no">Search Van No.</string>
    <string name="select_van_no">Select Van No.</string>
    <string name="enable_fingerprint_login">Enable Fingerprint Login?</string>
    <string name="would_you_like_to_use_your_fingerprint_for_future_logins">Would you like to use your fingerprint for future logins?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="choose_price_group">Choose Price Group</string>
    <string name="search_price_group">Search Price Group</string>
    <string name="choose_posting_group">Choose Posting Group</string>
    <string name="search_posting_group">Search Posting Group</string>
    <string name="choose_city">Choose City</string>
    <string name="search_city">Search City</string>
    <string name="choose_item">Choose Item</string>
    <string name="search_item">Search Item</string>
    <string name="choose_cost_center">Choose Cost Center</string>
    <string name="search_cost_center">Search Cost Center</string>
    <string name="choose_profit_center">Choose Profit Center</string>
    <string name="search_profit_center">Search Profit Center</string>
    <string name="choose_in_transit">Choose In Transit</string>
    <string name="search_in_transit">Search In Transit</string>
    <string name="choose_to_location">Choose To Location</string>
    <string name="search_to_location">Search To Location</string>
    <string name="please_add_items_to_order">Please add items to order</string>
    <string name="delete_order">Delete Order?</string>
    <string name="are_you_sure_you_want_to_delete_this_order">Are you sure you want to delete this order?</string>
    <string name="choose_incident_type">Choose Incident Type</string>
    <string name="search_incident_type">Search Incident Type</string>
    <string name="quality_you_deliver">Quality You Deliver</string>
    <string name="smart_fast_logistics"><![CDATA[Smart & Fast Logistics]]></string>
    <string name="accurate_orders_happy_customers">Accurate Orders, Happy Customers</string>
    <string name="track_deliver_succeed">Track. Deliver. Succeed</string>
    <string name="carry_alvima_s_high_standard_pasta_and_flour_safely_to_every_customer_with_trust_and_pride">Carry Alvima’s high-standard pasta and flour safely to every customer with trust and pride.</string>
    <string name="enjoy_seamless_deliveries_powered_by_fully_automated_systems_and_erp_integrated_routing">Enjoy seamless deliveries powered by fully automated systems and ERP-integrated routing.</string>
    <string name="ensure_every_delivery_meets_expectations_boosting_customer_satisfaction_across_ethiopia">Ensure every delivery meets expectations, boosting customer satisfaction across Ethiopia.</string>
    <string name="real_time_status_updates_help_you_complete_your_route_efficiently_and_grow_with_alvima">Real-time status updates help you complete your route efficiently and grow with Alvima.</string>
    <string name="resend_code">Resend Code</string>
    <string name="your_password_has_been_updated_securely_use_your_new_password_to_sign_in_to_your_account">Your password has been updated securely. Use your new password to sign in to your account.</string>
    <string name="start_route">Start Route</string>
    <string name="end_route">End Route</string>
    <string name="you_can_t_start_a_new_route_while_another_route_is_in_progress">You can’t start a new route while another route is in progress.</string>
    <string name="please_select_customer">Please select customer</string>
    <string name="please_select_invoice">Please select invoice</string>
    <string name="please_select_payment_mode">Please select payment mode</string>
    <string name="please_upload_payment_proof">Please upload payment proof</string>
    <string name="search_customer">Search Customer</string>
    <string name="choose_customer">Choose Customer</string>
    <string name="stock_report">Stock Report</string>
    <string name="delete_request">Delete Request</string>
    <string name="are_you_sure_you_want_to_delete_this_request">Are you sure you want to delete this request?</string>
    <string name="allow_background_location_access">Allow Background Location Access</string>
    <string name="to_track_location_offline_set_battery_unrestricted_for_this_app">To track location offline, set Battery → Unrestricted for this app.</string>
    <string name="please_enter_transaction_ref_no">Please enter transaction ref no</string>
    <string name="cheque_no">Cheque Ref No.</string>
    <string name="transaction_ref_no">Transaction Ref No.</string>
    <string name="enter_cheque_no">Enter cheque no.</string>
    <string name="enter_transaction_ref_no">Enter reference number</string>
    <string name="please_select_a_photo">Please select a delivery photo/site</string>
    <string name="please_enter_signature">Please add customer signature</string>
    <string name="search_vendor">Search Vendor</string>
    <string name="choose_vendor">Choose Vendor</string>
    <string name="visited">Visited</string>
    <string name="inprogress">InProgress</string>
    <string name="open">Open</string>
    <string name="delivered">Delivered</string>
    <string name="confirm_delivery">Confirm Delivery</string>
    <string name="delivery_photo_parcel_site">Delivery photo (parcel/site)*</string>
    <string name="signature">Signature*</string>
    <string name="clear">CLEAR</string>
    <string name="remarks_optional">Remarks (Optional)</string>
    <string name="enter_remark">Enter Remark</string>
    <string name="confirm">Confirm</string>
    <string name="new_customer">New Customer</string>
    <string name="customer_name">Customer Name*</string>
    <string name="cancel">Cancel</string>
    <string name="item">Item</string>
    <string name="add">Add</string>
    <string name="transfer_details">Transfer Details</string>
    <string name="from">From</string>
    <string name="quantity">Quantity</string>
    <string name="trip_report">Trip Report</string>
    <string name="edit_store_requisition_request">Edit Store\nRequisition Request</string>
    <string name="request_id">Request ID</string>
    <string name="from_location">From location</string>
    <string name="update_request">Update Request</string>
    <string name="submit">Submit</string>
    <string name="reports">Reports</string>
    <string name="sales_report">Sales Report</string>
    <string name="select_reason">Select Reason</string>
    <string name="write_reason">Write Reason</string>
    <string name="enter_reason">Enter Reason</string>
    <string name="add_end_kilometers">Add End Kilometers</string>
    <string name="end_kilometer">End Kilometer</string>
    <string name="continue_">Continue</string>
    <string name="password_successfully_changed">Password Successfully Changed</string>
    <string name="your_password_has_been_set_successfully_please_log_in_again_using_your_new_password">Your password has been set successfully. Please log in again using your new password.</string>
    <string name="visit_completed_no_order">Visit Completed – No Order</string>
    <string name="select_reason_why_order_not_taken">Select reason why order not taken</string>
    <string name="write_reason_">Write reason…</string>
</resources>