<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sanssemibold"
        android:padding="@dimen/_10sdp"
        android:text="@string/select_reason"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp" />

    <RadioGroup
        android:id="@+id/rgReason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:background="@drawable/input_bg2"
        android:orientation="vertical" />

    <TextView
        android:id="@+id/tvReasonLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sanssemibold"
        android:padding="@dimen/_10sdp"
        android:text="@string/write_reason"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        android:visibility="gone" />


    <EditText
        android:id="@+id/etAddReason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:background="@drawable/input_bg2"
        android:fontFamily="@font/sansregular"
        android:gravity="top"
        android:hint="@string/enter_reason"
        android:inputType="textMultiLine"
        android:minLines="3"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sanssemibold"
        android:padding="@dimen/_10sdp"
        android:text="@string/add_end_kilometers"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp" />


    <EditText
        android:id="@+id/etEndKm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:background="@drawable/input_bg2"
        android:fontFamily="@font/sansregular"
        android:hint="@string/end_kilometer"
        android:inputType="number"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/gray"
            android:fontFamily="@font/sansbold"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp" />

        <TextView
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/orange"
            android:fontFamily="@font/sansbold"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp" />
    </LinearLayout>
</LinearLayout>