<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <RelativeLayout
        android:id="@+id/rlTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_21sdp">

        <RelativeLayout
            android:id="@+id/btnBack"
            android:layout_width="@dimen/_42sdp"
            android:layout_height="@dimen/_42sdp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/transparent_circle">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_back" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/sanssemibold"
            android:text="@string/edit_store_requisition_request"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp" />
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rlTop"
        android:background="@drawable/bg_white_top_curve">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_21sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sanssemibold"
                android:text="@string/request_id"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp" />


            <TextView
                android:id="@+id/tvRequestId"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_44sdp"
                android:layout_marginTop="@dimen/_7sdp"
                android:background="@drawable/input_bg"
                android:fontFamily="@font/sansregular"
                android:gravity="center_vertical"
                android:paddingHorizontal="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/hintGary"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_7sdp"
                android:fontFamily="@font/sanssemibold"
                android:text="@string/from"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp" />


            <TextView
                android:id="@+id/tvFrom"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_44sdp"
                android:layout_marginTop="@dimen/_7sdp"
                android:background="@drawable/input_bg"
                android:ellipsize="end"
                android:fontFamily="@font/sansregular"
                android:gravity="center_vertical"
                android:hint="@string/from_location"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/hintGary"
                android:textSize="@dimen/_12ssp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_14sdp"
                android:background="@drawable/input_bg"
                android:orientation="vertical"
                android:padding="@dimen/_9sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sanssemibold"
                    android:text="@string/item"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11ssp" />

                <TextView
                    android:id="@+id/tvItem"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_44sdp"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:background="@drawable/border_bg"
                    android:fontFamily="@font/sansregular"
                    android:gravity="center_vertical"
                    android:hint="@string/choose_item"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hintGary"
                    android:textSize="@dimen/_12ssp"
                    app:drawableEndCompat="@drawable/ic_rounded_arrow_drop_down" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_9sdp"
                    android:fontFamily="@font/sanssemibold"
                    android:text="@string/quantity"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11ssp" />


                <EditText
                    android:id="@+id/etQty"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_44sdp"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:background="@drawable/border_bg"
                    android:fontFamily="@font/sansregular"
                    android:gravity="center_vertical"
                    android:hint="@string/enter_quantity"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hintGary"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:id="@+id/tvAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_9sdp"
                    android:background="@drawable/rounded_button_orange"
                    android:fontFamily="@font/sansbold"
                    android:gravity="center"
                    android:padding="@dimen/_14sdp"
                    android:text="@string/add"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/llRequestList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_9sdp"
                android:background="@drawable/input_bg"
                android:orientation="vertical"
                android:padding="@dimen/_9sdp"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sansregular"
                    android:text="@string/transfer_details"
                    android:textColor="@color/darkGray"
                    android:textSize="@dimen/_12ssp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvTransferList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvUpdateRequest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_21sdp"
                android:background="@drawable/rounded_button_orange"
                android:fontFamily="@font/sansbold"
                android:gravity="center"
                android:paddingVertical="@dimen/_14sdp"
                android:text="@string/update_request"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp" />

            <TextView
                android:id="@+id/tvDelete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_21sdp"
                android:background="@drawable/rounded_button_red"
                android:fontFamily="@font/sansbold"
                android:gravity="center"
                android:padding="@dimen/_14sdp"
                android:text="@string/delete_request"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>