<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/_21sdp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/ic_password_done" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="@dimen/_21sdp"
        android:fontFamily="@font/sanssemibold"
        android:text="@string/password_successfully_changed"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_16ssp" />

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_21sdp"
        android:fontFamily="@font/sansregular"
        android:text="@string/your_password_has_been_set_successfully_please_log_in_again_using_your_new_password"
        android:textAlignment="center"
        android:textColor="#909090"
        android:textSize="@dimen/_11ssp" />

    <TextView
        android:id="@+id/tvContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button_orange"
        android:fontFamily="@font/sanssemibold"
        android:gravity="center"
        android:padding="@dimen/_14sdp"
        android:text="@string/continue_"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp" />

</LinearLayout>